# mcp-studio

./: .claude_plan.md  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  release.toml
.github/workflows/: check.yml  release.yml
docs/: CHANGELOG.md  actions-and-assertions.md  concepts.md  core-contract.md  cue-spec.md  release.md  state-and-changes.md  system-design.md  tagging.md  test-recorder-and-replay.md  testing-logic.md  widget-assertions-plan.md
docs/changelog/: v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.31.md  v0.3.32.md  v0.3.34.md  v0.3.35.md  v0.3.36.md  v0.3.37.md  v0.3.38.md  v0.3.39.md  v0.4.0.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/lib/: config.ts  status.ts  utils.ts
frontend/src/routes/: index.tsx  oauth.callback.tsx
frontend/src/widget-bridge/: recorder-bridge.js
install/: install.sh
npm/mcp-studio/: package.json
npm/mcp-studio-darwin-arm64/: package.json
npm/mcp-studio-darwin-x64/: package.json
npm/mcp-studio-linux-arm64/: index.js  package.json
npm/mcp-studio-linux-x64/: package.json
scripts/: bump-version.sh  format.sh
src/: action_log.rs  assets.rs  cloud.rs  config.rs  control.rs  forwarding.rs  headless.rs  jobs.rs  main.rs  profiles.rs  proxy.rs  reports_api.rs  run_results_api.rs  server.rs  storage.rs  tests_api.rs  tunnel.rs
website/: .prettierrc  package-lock.json  package.json  pnpm-lock.yaml
website/.astro/: settings.json
website/src/components/: AppWindow.astro  Footer.astro  Nav.astro
(+315 files in other folders)
