[package]
name = "mcp-studio"
version = "0.3.40"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/pragmalabs-tech/mcp-studio"
description = "A local studio to debug MCP Servers and MCP Applications"

[[bin]]
name = "mcp-studio"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8"
mime_guess = "2"
open = "5"
anyhow = "1"
bytes = "1"
http = "1"
mcp-tunnel-client = "0.2.1"
dirs = "5"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
thiserror = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
